--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@nomiclabs/buidler-truffle5": "^1.1.2",
     "@nomiclabs/buidler-web3": "^1.1.2",
     "@openzeppelin/contracts": "^2.5.0",
+    "eth-sig-util": "^2.5.3",
+    "ethereumjs-util": "^6.2.0",
     "web3": "^1.2.6"
   },
   "scripts": {
