--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ourzora/zora-contracts",
   "version": "1.0.0",
-  "description": "(Greek: Αἰών) is a Hellenistic deity associated with time, the orb or circle encompassing the universe, and the zodiac.",
+  "description": "A token factory that enables any person of community to tokenize any good or endeavour.",
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
@@ -20,7 +20,7 @@
     "type": "git",
     "url": "git+https://github.com/ourzora/zora-contracts.git"
   },
-  "author": "",
+  "author": "Alex Kern <alex@kern.io>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/ourzora/zora-contracts/issues"
